@@ -1,7 +1,9 @@
 package org.tc.osgi.bundle.utils.interf.collection.element;
 
-import org.junit.Assert;
-import org.junit.Test;
+
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * PairTest.java.
@@ -22,17 +24,17 @@ public class PairTest {
 		final Pair<String, Integer> clef_valeur = new Pair<String, Integer>("toto", 2);
 		clef_valeur.hashCode();
 		clef_valeur.toString();
-		Assert.assertEquals("toto", clef_valeur.getFirst());
-		Assert.assertEquals(new Integer(2), clef_valeur.getSecond());
+		assertEquals("toto", clef_valeur.getFirst());
+		assertEquals(Integer.valueOf(2), clef_valeur.getSecond());
 
 		final Pair<String, Integer> clef_valeur2 = new Pair<String, Integer>("toto", 2);
 
-		Assert.assertEquals(false, clef_valeur.equals("Toto"));
-		Assert.assertEquals(false, clef_valeur.equals(null));
-		Assert.assertEquals(true, clef_valeur.equals(clef_valeur2));
+		assertEquals(false, clef_valeur.equals(null));
+		assertEquals(false, clef_valeur.equals("Toto"));
+		assertEquals(true, clef_valeur.equals(clef_valeur2));
 
 		final Pair<String, Integer> clef_valeur3 = new Pair<String, Integer>("tata", 2);
-		Assert.assertEquals(false, clef_valeur.equals(clef_valeur3));
+		assertEquals(false, clef_valeur.equals(clef_valeur3));
 
 	}
 
